--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(getPrompts)
 export(getQueries)
 export(getQueryByName)
 export(grabJSON)
+export(jsonToTable)
 export(publlamaInit)
 export(searchPubmed)
 export(strip)
