Add getTypes() to get in-use article types

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(getOrRegisterEvaluator)
 export(getPrompts)
 export(getQueries)
 export(getQueryByName)
+export(getTypes)
 export(grabJSON)
 export(jsonToTable)
 export(publlamaInit)
